load("@rules_cc//cc:defs.bzl", "cc_library")

_public_hdrs = [
    "include/boost/*.hpp",
    "include/boost/algorithm/*.hpp",
    "include/boost/cxx11/*.hpp",
    "include/boost/cxx14/*.hpp",
    "include/boost/cxx17/*.hpp",
    "include/boost/searching/*.hpp",
    "include/boost/string/*.hpp",
    "include/boost/string/std/*.hpp",
]

cc_library(
    name = "algorithm_internal",
    hdrs = glob(["include/boost/**/*.hpp"], exclude = _public_hdrs),
    deps = [
        "@boost//array",
    ],
)

cc_library(
    name = "algorithm",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(_public_hdrs),
    deps = [
        ":algorithm_internal",
        "@boost//range",
        "@boost//config",
        "@boost//utility",
        "@boost//type_traits",
        "@boost//mpl",
        "@boost//exception",
        "@boost//throw_exception",
        "@boost//tuple",
    ],
)
