load("@rules_cc//cc:defs.bzl", "cc_library")

_private_hdrs = [
    "include/boost/**/*/detail/**/*.hpp",
]

cc_library(
    name = "algorithm_internal",
    hdrs = glob(_private_hdrs),
    deps = [
        "@boost//libs/array",
    ],
)

cc_library(
    name = "algorithm",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(["include/boost/**/*.hpp"], exclude = _private_hdrs),
    deps = [
        ":algorithm_internal",
        "@boost//libs/range",
        "@boost//libs/config",
        "@boost//libs/utility",
        "@boost//libs/type_traits",
        "@boost//libs/mpl",
        "@boost//libs/exception",
        "@boost//libs/throw_exception",
        "@boost//libs/tuple",
        "@boost//libs/function",
    ],
)
